--- a/Core.DALC/Core.Servicios/Web.config
+++ b/Core.DALC/Core.Servicios/Web.config
@@ -1,27 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
-    <section name="oracle.manageddataaccess.client"
-      type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>    
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
   </configSections>
   <connectionStrings>
-    <add name="QueOfrecesEntities"
-      connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;"
-      providerName="System.Data.EntityClient"/>
+    <add name="QueOfrecesEntities" connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
-  </appSettings>
+  <appSettings/>
+  <!--
+    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.serviceModel>
-   
     <behaviors>
       <endpointBehaviors>
         <behavior name="Core.Servicios.ServicioWebAspNetAjaxBehavior">
@@ -38,7 +39,7 @@
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https"/>
     </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="false" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -70,8 +71,7 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="Oracle.ManagedDataAccess.Client"/>
-      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver"
-        type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
     </DbProviderFactories>
   </system.data>
   <oracle.manageddataaccess.client>
