--- a/Core.DALC/Core.DALC/Core.DALC.csproj
+++ b/Core.DALC/Core.DALC/Core.DALC.csproj
@@ -29,6 +29,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>QueOfreces.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
@@ -151,6 +154,7 @@
       <DependentUpon>EDMQueOfreces.edmx</DependentUpon>
       <LastGenOutput>EDMQueOfreces.cs</LastGenOutput>
     </Content>
+    <Content Include="QueOfreces.ico" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
